--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,8 @@
   "author": "raghav",
   "license": "MIT",
   "dependencies": {
+    "mongoose": "^4.3.7",
     "restify": "^4.0.3",
-    "mongoose": "^4.3.7"
+    "underscore": "^1.8.3"
   }
 }
